Comment out persistence layer for tests. it is enable only from control panel

--- a/resources/config/ch-services.properties
+++ b/resources/config/ch-services.properties
@@ -1,9 +1,9 @@
-SERVICE_CLASS=com.ch.service.impl.DocumentStoreService
+#SERVICE_CLASS=com.ch.service.impl.DocumentStoreService
 #SERVICE_CLASS=com.ch.service.impl.HttpReportService
-CH_AZURE_BLOB_SAS_URL=https://chreports.blob.core.windows.net/htmlreports?sp=racwdl&st=2021-06-14T23:53:04Z&se=2121-06-15T07:53:04Z&spr=https&sv=2020-02-10&sr=c&sig=KbDLAiHv2KZkdLl6B%2FkfHIhgqvHHJsII6d%2B3sdyWcB8%3D
+#CH_AZURE_BLOB_SAS_URL=https://chreports.blob.core.windows.net/htmlreports?sp=racwdl&st=2021-06-14T23:53:04Z&se=2121-06-15T07:53:04Z&spr=https&sv=2020-02-10&sr=c&sig=KbDLAiHv2KZkdLl6B%2FkfHIhgqvHHJsII6d%2B3sdyWcB8%3D
 REPORT_TIMEZONE=America/New_York
 #mongodb+srv://demodb:*****@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
-MONGO_DB_URI=mongodb+srv://demodb:3Z8NZUupv7It3TzG@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+#MONGO_DB_URI=mongodb+srv://demodb:3Z8NZUupv7It3TzG@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 MONGO_DBNAME=demodb
 CH_LOG_API=true
-IS_UPLOAD_REPORT_ENABLED=true
+IS_UPLOAD_REPORT_ENABLED=false
