--- a/resources/config/ch-services.properties
+++ b/resources/config/ch-services.properties
@@ -3,7 +3,14 @@
 #CH_AZURE_BLOB_SAS_URL=https://chreports.blob.core.windows.net/htmlreports?sp=racwdl&st=2021-06-14T23:53:04Z&se=2121-06-15T07:53:04Z&spr=https&sv=2020-02-10&sr=c&sig=KbDLAiHv2KZkdLl6B%2FkfHIhgqvHHJsII6d%2B3sdyWcB8%3D
 REPORT_TIMEZONE=America/New_York
 #mongodb+srv://demodb:*****@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
-#MONGO_DB_URI=mongodb+srv://demodb:3Z8NZUupv7It3TzG@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+MONGO_DB_URI=mongodb+srv://demodb:3Z8NZUupv7It3TzG@rnd.tkxau.mongodb.net/demodb?authSource=admin&replicaSet=atlas-mngaub-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 MONGO_DBNAME=demodb
 CH_LOG_API=true
 IS_UPLOAD_REPORT_ENABLED=false
+#Service URL
+CH_API_BASE_URL = https://dev-api.chtsinc.com/push-service/v2
+CH_EXECUTION_REPORT_API_URI = /execution-report
+CH_TEST_REPORT_API_URI = /test-report
+CH_BATCH_REPORT_API_URI = /batch/test-report
+
+		
