--- a/resources/config/server.properties
+++ b/resources/config/server.properties
@@ -1,8 +1,8 @@
-AUT_URL_QA= https://mw-staging.katespade.com/
-AUT_URL_DEV= https://mw-staging.katespade.com/
-AUT_URL_STAGE= https://mw-staging.katespade.com/
+AUT_URL_QA= https://staging.katespade.com/
+AUT_URL_DEV= https://staging.katespade.com/
+AUT_URL_STAGE= https://staging.katespade.com/
 SUBSCRIPTION_KEY=816bb001-433e-4b07-a7a5-1d413cdbe5b2
 SITE_NAME=demo
-
+ENVIRONMENT=dev
 
 
